[tool.poetry]
name = "prometheus_multiprocess"
version = "0.1.0"
description = ""
authors = ["Junpei Tsuji <junpei.tsuji.ams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
gunicorn = "^20.1.0"
prometheus-fastapi-instrumentator = "^5.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
